samples/_failures_safe/1761431817_a882a2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_03fdf674.c:133:47: error: expected declaration specifiers or ‘...’ at end of input
  133 | void print_high_severity_entries(const struct LogAnalyzer *analyzer,
      |                                               ^~~~~~~~~~~
